{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 26,
  "lineage": "2714289f-9aa2-5878-960b-77d456378b10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2bae8c8632fc77c",
            "arn": "arn:aws:ec2:us-east-1:058264132748:elastic-ip/eipalloc-0b2bae8c8632fc77c",
            "domain": "vpc",
            "id": "eipalloc-0b2bae8c8632fc77c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-220-81.compute-1.amazonaws.com",
            "public_ip": "54.158.220.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:internet-gateway/igw-0e0e80ed02a0a5f31",
            "id": "igw-0e0e80ed02a0a5f31",
            "owner_id": "058264132748",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2bae8c8632fc77c",
            "association_id": "eipassoc-0e490fb835b10fef9",
            "connectivity_type": "public",
            "id": "nat-0c2f3172476ce3c83",
            "network_interface_id": "eni-02842afadbeb8dc9e",
            "private_ip": "10.0.1.252",
            "public_ip": "54.158.220.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077d172437b22e109",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:route-table/rtb-0e3ff5ca36a9668dd",
            "id": "rtb-0e3ff5ca36a9668dd",
            "owner_id": "058264132748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c2f3172476ce3c83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt2"
            },
            "tags_all": {
              "Name": "main_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:route-table/rtb-0aecff7ad28492c3c",
            "id": "rtb-0aecff7ad28492c3c",
            "owner_id": "058264132748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0e80ed02a0a5f31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt"
            },
            "tags_all": {
              "Name": "main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c713745345f2239b",
            "route_table_id": "rtb-0e3ff5ca36a9668dd",
            "subnet_id": "subnet-0db087abda7994677"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c677297be8b7bc6",
            "route_table_id": "rtb-0e3ff5ca36a9668dd",
            "subnet_id": "subnet-001afcd05d882c404"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec7888e966eb884",
            "route_table_id": "rtb-0aecff7ad28492c3c",
            "subnet_id": "subnet-077d172437b22e109"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0184c2adb9c6b72ef",
            "route_table_id": "rtb-0aecff7ad28492c3c",
            "subnet_id": "subnet-0edb1f9a5bef08858"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:security-group/sg-07cf02c8d84ebf6f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cf02c8d84ebf6f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main_sg",
            "name_prefix": "",
            "owner_id": "058264132748",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:subnet/subnet-0db087abda7994677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db087abda7994677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264132748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:subnet/subnet-001afcd05d882c404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001afcd05d882c404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264132748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:subnet/subnet-077d172437b22e109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077d172437b22e109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264132748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:subnet/subnet-0edb1f9a5bef08858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edb1f9a5bef08858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264132748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_subnet",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06f96ac0280bac976"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264132748:vpc/vpc-06f96ac0280bac976",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081746c911c46a00d",
            "default_route_table_id": "rtb-05cde8f5cf0bb3ba5",
            "default_security_group_id": "sg-0397c778045bb026b",
            "dhcp_options_id": "dopt-0542f7300c1660af1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f96ac0280bac976",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05cde8f5cf0bb3ba5",
            "owner_id": "058264132748",
            "tags": {
              "name": "main_vpc"
            },
            "tags_all": {
              "name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}